# qobject-with-ranges-mirror

./: .gitignore  .gitmodules  README.md
src/: qrange.cpp  qrange.h  qrangecoro_p.h  qrangefallback_p.h
test/: CMakeLists.txt  FooBar.h  benchmarks.h  main.cpp
